# BerlinClockConverter

./: .gitignore  CMakeLists.txt  README.md
src/: BerlinClock.cpp  BerlinClock.h  BerlinClockTest.cpp  ITimeValidator.h  TimeValidator.cpp  TimeValidator.h  TimeValidatorTest.cpp  main.cpp  main_test.cpp
